src/objects/SPE_SPEPlan__c.object
<CustomObject>
    <customHelpPage>SPE_SPE_Definition_Help_Page</customHelpPage>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF( TODAY()&lt;EndDate__c,true,false)</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ad Hoc Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Days__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Buffer Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Days_for_week__c</fullName>
        <label>Additional Days for week</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AggregationDuration__c</fullName>
        <label>Aggregation Duration</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AutoTicket__c</fullName>
        <label>Auto-Ticket</label>
        <picklist>
            <picklistValues>
                <fullName>OFF</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ON</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Avg_Tracker_Score__c</fullName>
        <formula>Total_Tracker_Score__c  /  Tracker_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Tracker Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GLOBAL SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATURE SOFTWARE PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE BROADBAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTICAL NETWORKS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Category Manager</inlineHelpText>
        <label>CM</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SPE_Plan2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CategoryCluster__c</fullName>
        <label>Category Area</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIRECT PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICES PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNREPORTED SPEND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT PROCUREMENT &amp; TELECOMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOGISTICS SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROFESSIONAL SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D SUBCONTRACTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TESTING MANUFACTURING &amp; MEASUREMENT EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAVEL &amp; FLEET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS INCUBATION &amp; E2E SOLUTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELECTRONIC MANUFACTURING SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERCONNECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECHANICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM/ODM/JDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTICAL COMPONENTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEMICONDUCTOR AND RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXTERNAL WORKFORCE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI MATERIALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING MS NPO &amp; SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING OTHER NI SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING TELECOM IMPLEMENTATION SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEACTIVATED STRUCTURES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISCONTINUED BUSINESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPENDITURES REPORTED ERRONEOUSLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON-MANAGED EXPENDITURES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT ASSIGNED SPEND GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNREPORTED SPEND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D SOLUTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TESTING AND MANUFACTURING EQUIPMENT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>BUILDING INVESTMENT/CAPEX WITHOUT RENTS AND LEASES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY MANAGEMENT SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RENTAL/LEASE/TRANSACTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTILITIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPLICATION DEVELOPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPLICATION MAINTENANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT HW PERIPHERALS / SERVERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INFRASTRUCTURE SERVICES &amp; CLOUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE VOICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WORKPLACE DEVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSOCIATED SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRANSPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAREHOUSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS SERVICES OTHERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COACHING &amp; OTHER CONSULTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSULTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINANCIAL TAX &amp; INSURANCES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEGAL &amp; INTELLECTUAL PROPERTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARKETING &amp; COMMUNICATIONS SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFFICE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEST SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAINING SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUNCTIONAL TEST EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT PERIPHERAL DEVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANUFACTURING AUXILIARIES AND CONSUMABLES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANUFACTURING EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERFORMANCE TEST EQUIPMENT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CompletedTracker__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Completed SPE Tracker</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompletedTrackers__c</fullName>
        <label>Completed SPE Trackers</label>
        <summaryFilterItems>
            <field>SPE_SPETracker__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>SPE_SPETracker__c.SPEPlan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Day_name_of_upload_week__c</fullName>
        <label>Day name of upload week</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <inlineHelpText>On what date with the SPE Plan no longer be used</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Month__c</fullName>
        <label>End Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Year__c</fullName>
        <label>End Year</label>
        <picklist>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2031</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2032</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FrequencyInMonths__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Tracker_Date__c</fullName>
        <label>Last Tracker Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_Upload_Day__c</fullName>
        <label>Month Upload Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Value__c</fullName>
        <label>Month Value</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Computed_Day__c</fullName>
        <label>Next Computed Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organization_Group__c</fullName>
        <inlineHelpText>Relevant org/group for this data</inlineHelpText>
        <label>Organization/Group</label>
        <picklist>
            <picklistValues>
                <fullName>INDIRECT PROCUREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT PROCUREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICES PROCUREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARTNERING ORGANIZATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE BROADBAND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPM1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Project Procurement Manager</inlineHelpText>
        <label>PPM</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SPE Plans (PPM)</relationshipLabel>
        <relationshipName>SPE_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Identifier__c</fullName>
        <label>Plan Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product1__c</fullName>
        <label>Product1</label>
        <picklist>
            <picklistValues>
                <fullName>All Product</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ATCA BLADE HARDWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATCA EMBEDDED SOFTWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATCA HW PLATFORM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BROWSING GATEWAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPX5000 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIRCUIT SWITCHED DATA SERVER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMMUNICATION SUITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPACT DX MSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET GATEWAY @VANTAGE CPG-3200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET GATEWAY @VANTAGE CPG-3200 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET GATEWAY @VANTAGE CPG-3200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET GATEWAY @VANTAGE CPG-3300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET GATEWAY @VANTAGE CPG-3300 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET ROUTER @VANTAGE CPR-3200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET ROUTER @VANTAGE CPR-3200 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET ROUTER @VANTAGE CPR-3200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET ROUTER @VANTAGE CPR-3300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET ROUTER @VANTAGE CPR-3300 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE PACKET ROUTER @VANTAGE CPR-3300 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAXNODE 5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 200 PLATFORM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 200 RSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 210 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 220 COMPACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX MSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DXT HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DXT PLATFORM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DXT SW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <label>Product2</label>
        <picklist>
            <picklistValues>
                <fullName>All Product</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS HIG 1200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS HIG 1200 TRUNK GATEWAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-2100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-8100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1180 MP SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1180 TM SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1200-X SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1210 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-210 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-2140 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-2200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-4100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1180 MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1180 TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1200-X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-1210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-2100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-2140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-2200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-4100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product3__c</fullName>
        <label>Product3</label>
        <picklist>
            <picklistValues>
                <fullName>All Product</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS HIG1100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS HIR 200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS HIR 220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS HIR200 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS HIR200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH COMMANDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH COMMANDER HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH COMMANDER OEM SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH COMMANDER SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDM SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDISKUS SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE 9200 S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 CCGE HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 CP113E HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 LTGP HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 MBD HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 MCP HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 PM HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 SND HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 SSNC HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 STMI HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIG 1600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIG 1600 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIG 1600 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIG 1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIG 1800 HW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>